# riivault

./: .env.example  .gitignore  README.md  docker-compose.yml  schema.sql
.github/workflows/: collect.yml  publish.yml
backend/: README.md  entities.yaml  pyproject.toml
backend/riivault/: __init__.py  catalog.py  cli.py  config.py  db.py  entities.py
backend/riivault/analysis/: normalize.py  signals.py
backend/riivault/api/: __init__.py  deps.py  main.py
backend/riivault/api/routes/: entities.py  issue.py  painpoints.py  signals.py  subscribe.py
backend/riivault/collector/: __init__.py  adoption.py  aggregate.py  github.py  hackernews.py  pipeline.py  producthunt.py  publish.py  purge.py  ratelimit.py  recluster.py  reddit.py  scheduler.py  seed_demo.py
backend/riivault/nlp/: __init__.py  embed.py  sentiment.py  voc.py
backend/tests/: test_adoption.py  test_aggregate.py  test_backfill.py  test_catalog.py  test_embed.py  test_entities.py  test_github.py  test_hackernews.py  test_normalize.py  test_producthunt.py  test_ratelimit.py  test_sentiment.py  test_signal_detect.py  test_voc.py
design/: index.html
docs/: CONTRACT.md  DEPLOY.md  reddit-api-access-brief-v2.html  reddit-api-access-brief.html  reddit-api-access-ticket.md  reddit-api-access-ticket.txt
web/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: EmergingSignals.tsx  Footer.tsx  HeroChart.tsx  KpiCards.tsx  Lead.tsx  Masthead.tsx  MastheadNav.tsx  PainPointsFeed.tsx  SignalCharts.tsx  (+4 more)
(+12 files in other folders)
